--- a/css/styles.css
+++ b/css/styles.css
@@ -570,9 +570,6 @@ img {
   gap: 24px;
 }
 
-.subscribe-label {
-}
-
 .subscribe-input {
   border: 1px solid #fff;
   border-radius: 4px;
@@ -580,18 +577,23 @@ img {
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: transparent;
-}
-
-.subscribe-input::placeholder {
-  padding-left: 16px;
-  font-weight: 400;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
+  padding-left: 16px;
   color: #fff;
 }
 
+.subscribe-input::placeholder {
+  color: #fff;
+}
+
+.subscribe-label {
+}
+
 .subscribe-btn {
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
   border-radius: 4px;
   padding: 8px 24px;
   width: 165px;
@@ -633,6 +635,8 @@ img {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
@@ -648,7 +652,7 @@ img {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
-  padding: 0 24px;
+  padding: 72px 24px;
   position: relative;
 }
 
@@ -664,6 +668,10 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-exit-svg {
@@ -687,12 +695,10 @@ img {
 
 .modal-text {
   font-weight: 500;
-  padding-top: 72px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  margin-bottom: 24px;
 }
 
 .modal-field {
