--- a/css/styles.css
+++ b/css/styles.css
@@ -557,17 +557,14 @@ img {
 
 .subscribe-text {
   font-weight: 500;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
-  padding-left: 24px;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .subscribe-form {
   display: flex;
-  gap: 24px;
 }
 
 .subscribe-input {
@@ -596,11 +593,9 @@ img {
   cursor: pointer;
   border-radius: 4px;
   padding: 8px 24px;
-  width: 165px;
   height: 40px;
   background-color: #4d5ae5;
   font-weight: 500;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   text-align: center;
@@ -608,11 +603,13 @@ img {
   display: flex;
   align-items: center;
   border: none;
-  gap: 16px;
+  min-width: 165px;
+  justify-content: center;
 }
 
 .subscribe-icon-svg {
   fill: #fff;
+  margin-left: 16px;
 }
 
 .subscribe-icon {
@@ -632,9 +629,9 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0;
+  /* opacity: 0;
   pointer-events: none;
-  visibility: hidden;
+  visibility: hidden; */
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -654,13 +651,15 @@ img {
   background: #fcfcfc;
   padding: 72px 24px;
   position: relative;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-exit-btn {
   position: absolute;
   top: 24px;
   right: 24px;
-  border-radius: 100%;
+  padding: 0;
+  border-radius: 50%;
   fill: #e7e9fc;
   width: 24px;
   height: 24px;
@@ -699,9 +698,11 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 16px;
 }
 
 .modal-field {
+  margin-bottom: 8px;
 }
 
 .modal-label {
@@ -786,7 +787,6 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 8px;
   fill: transparent;
 }
 
