--- a/css/styles.css
+++ b/css/styles.css
@@ -626,9 +626,6 @@ img {
   top: 0;
   left: 0;
   z-index: 999;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   /* opacity: 0;
   pointer-events: none;
   visibility: hidden; */
@@ -643,6 +640,10 @@ img {
 }
 
 .modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 4px;
   width: 408px;
   min-height: 584px;
@@ -710,8 +711,9 @@ img {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: #636580;
-  padding-bottom: 4px;
+  color: #8e8f99;
+  margin-bottom: 4px;
+  display: block;
 }
 
 .modal-input-wrap {
@@ -736,6 +738,7 @@ img {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
@@ -746,19 +749,33 @@ img {
   fill: #4d5ae5;
 }
 
+.modal-field-textarea {
+  margin-bottom: 16px;
+}
+
 .modal-textarea {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 360px;
+  height: 120px;
   max-height: 126px;
-}
-
-.modal-textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea:focus {
+  border-color: #4d5ae5;
+}
+
+.modal-textarea::placeholder {
 }
 
 .modal-policy-wrap {
@@ -773,6 +790,13 @@ img {
   display: flex;
   align-items: center;
   gap: 8px;
+}
+
+.modal-policy-span {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
 }
 
 .modal-policy-input {
@@ -817,13 +841,13 @@ img {
   color: #fff;
   border-radius: 4px;
   padding: 16px 32px;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #4d5ae5;
   border: none;
   display: block;
   margin: 0 auto;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* -------------------------------------------------- */
