--- a/css/styles.css
+++ b/css/styles.css
@@ -627,9 +627,9 @@ img {
   top: 0;
   left: 0;
   z-index: 999;
-  /* opacity: 0;
+  opacity: 0;
   pointer-events: none;
-  visibility: hidden; */
+  visibility: hidden;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
